--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -2,7 +2,9 @@ FROM cypress/browsers:node16.14.2-slim-chrome100-ff99-edge
 
 LABEL maintainer="jinjie" \
       description="Image used for running Cypress testing framework"
-    
+
+WORKDIR /app
+
 RUN npm install -g cypress mysql pg \
                    mocha mocha-steps mochawesome mochawesome-merge \
                    mochawesome-report-generator \
@@ -15,5 +17,3 @@ RUN npm install -g cypress mysql pg \
 COPY ./version-info /usr/bin
 
 RUN chmod +x /usr/bin/version-info
-
-RUN npm link $(ls -1 $(npm root -g)/)
